Sat Sep 16 14:45:49 2006  Tim Janik  <timj@gtk.org>

	* bseblockutils.cc: access Resampler2::create_impl() via derivation.

	* bseresampler.tcc: whitespace fixups. fixed includes. fixed
	unconditional use of __m128. renamed AlignedMem to AlignedArray because
	this class implements aligned array accesses instead of a memory
	allocator. adapted callers.

	* bsedatahandle-resample.cc:
	* bseresampler.cc, gsldatahandle.h: whitespace and comment fixups.

	* bse/bseresampler.hh: whitespace fixups. made create_impl() non-public,
	it can be accessed by blockutil implementations via derivation.

Sat Sep 16 09:25:17 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* bseresampler.tcc bseresampler.cc bseresampler.hh: Added factor 2
	resampling code (up- and downsampling), which can use SSE instructions
	when available. The implementation was tuned for speed.

	* gsldatahandle.h bsedatahandle-resample.cc: Provide a datahandle,
	which does factor 2 upsampling.

	* bseblockutils.cc bseblockutils.hh: Provide factory method for the
	resampler, so that bse can automatically use the SSE version when SSE
	instructions are available.

	* tests/testresamplercoeffs.h tests/testresampler.cc: Standalone
	interactive test code for the resampler.

	* tests/resamplercapi.c tests/resamplehandle.cc: Tests for the
	resampler C API and the resampler data handle.

	* Makefile.am: Adapted Makefile rules for the new resampler sources.

	* tests/Makefile.am: Adapted Makefile rules for the new resampler
	tests. Fixed subnormals_CXXFLAGS, which now includes AM_CXXFLAGS.

Sun Sep 10 22:46:55 2006  Tim Janik  <timj@gtk.org>

	* gsldatautils.h, gsldatautils.c: added bse_wave_file_from_fbuffer() and
	bse_wave_file_from_dbuffer() to easily save WAV files from memory.

Sat Jul 15 20:06:24 2006  Tim Janik  <timj@gtk.org>

	* gslwaveosc-aux.c: use doubles instead of floats to store temporary
	filter state. this avoids artefacts for larger pitch values.

Sat Jul 15 04:11:06 2006  Tim Janik  <timj@gtk.org>
