@@ -1,5 +1,6 @@
 NEXT-RELEASE:
 - undef _DOMAIN
+- rename: bse/Makefile.am: bse_c_sources & bse_cc_sources
 - fix birnet_thread_run uses (unref thread)
 - add plugin objects to http://beast.gtk.org/bse-objects
 - WEB: add LAD-2005 paper to website
