@@ -1,3 +1,9 @@
+Sat Sep 16 15:19:33 2006  Tim Janik  <timj@gtk.org>
+
+	* bseresamplerimpl.hh: renamed bseresampler.tcc to bseresamplerimpl.hh
+	to match beast naming conventions, and because it effectively implements
+	parts of bseresampler.hh.
+
 Sat Sep 16 14:45:49 2006  Tim Janik  <timj@gtk.org>
 
 	* bseblockutils.cc: access Resampler2::create_impl() via derivation.
